--- a/kona-bikes/package.json
+++ b/kona-bikes/package.json
@@ -8,6 +8,8 @@
     "bootstrap-grid": "^3.0.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "reactstrap": "^7.1.0"
   },
